tree-sitter-oneil/grammar.js
    source_file: ($) =>
      seq(
        optional($._end_of_line),
        optional($.note),
        repeat($._declaration),
        repeat($.section),
      ),

    // ---------------------------------------------------------------------
    // Line structure
    // ---------------------------------------------------------------------

    // A required declaration/statement terminator: one or more line breaks
    // and/or comment-only lines (each comment already consumes its own
    // trailing line break -- or nothing, at true end of file -- so a bare
    // `$.comment` is a complete "line" on its own here), or, if there is no
    // trailing line break at all, literal end of file (`$._eof`, an
    // external, zero-width token; see `src/scanner.c`). Mirrors
    // `oneil_parser::token::structure::end_of_line` exactly.
    _end_of_line: ($) => choice(repeat1(choice($._newline, $.comment)), $._eof),
    note: ($) => seq(choice($.single_line_note, $.multi_line_note), $._end_of_line),

    single_line_note: ($) =>
      seq('~', repeat(choice($.note_math, $._stray_dollar, $._note_text))),
    // Fallback for a `$` that isn't valid math (e.g. "Cost: $5/kg") -- just
    // ordinary content, not an error. Lower precedence than `note_math` is
    // a tie-breaker only in principle: the two can never match the same
    // span.
    _stray_dollar: () => token(prec(-1, '$')),
    _note_text: () => token(/[^\n$]+/),
    note_math: () => token(prec(1, NOTE_MATH)),

    // Composed from four external tokens (`src/scanner.c`): opening fence,
    // a repeated mix of math/text, closing fence. The closing fence token
    // stops right at the fence (doesn't consume its line break), matching
    // `single_line_note` so `$._end_of_line` handles both uniformly.
    multi_line_note: ($) =>
      seq(
        $._multi_line_note_open,
        repeat(choice(alias($._multi_line_note_math, $.note_math), $._multi_line_note_text)),
        $._multi_line_note_close,
      ),

    // ---------------------------------------------------------------------
    // Top level: sections & declarations
    // ---------------------------------------------------------------------

    section: ($) =>
      seq(
        keyword('section'),
        field('label', $.label),
        $._end_of_line,
        optional($.note),
        repeat($._declaration),
      ),

    // NOTE: Unlike the reference grammar, `design_target` and the shorthand
    // `design_parameter` form are accepted anywhere a declaration is
    // accepted (top level or inside a section), rather than only at the top
    // of a `.one` design file. This keeps a single grammar for both `.on`
    // and `.one` files; see the ADR for rationale.
    _declaration: ($) =>
      choice(
        $.design_target,
        $.import,
        $.apply,
        $.submodel,
        $.test,
        $.parameter,
        $.design_parameter,
      ),

    design_target: ($) =>
      seq(
        keyword('design'),
        optional($.directory_path),
        field('target', $.identifier),
        $._end_of_line,
      ),

    import: ($) => seq(keyword('import'), field('path', $.identifier), $._end_of_line),

    // -------------------------------------------------------------------
    // Apply
    // -------------------------------------------------------------------

    apply: ($) => seq(keyword('apply'), $._apply_body, $._end_of_line),

    _apply_body: ($) =>
      seq(
        optional($.directory_path),
        field('file', $.identifier),
        keyword('to'),
        field('target', $.model_path),
        optional($.apply_block),
      ),

    // Nested applies are permissively separated: a trailing comma, a line
    // break, both, or neither, matching `oneil_parser::declaration`'s
    // `nested_apply_item` (comma-or-end-of-line, then an independent
    // optional end-of-line).
    apply_block: ($) =>
      seq(
        '[',
        optional($._end_of_line),
        repeat(seq($._apply_body, optional(','), optional($._end_of_line))),
        ']',
      ),

    model_path: ($) => seq($.identifier, repeat(seq('.', $.identifier))),

    // -------------------------------------------------------------------
    // Submodel / reference
    // -------------------------------------------------------------------

    submodel: ($) =>
      seq(
        field('kind', choice(keyword('submodel'), keyword('reference'))),
        optional($.directory_path),
        field('model', $.model_info),
        optional($.submodel_list),
        $._end_of_line,
      ),

    directory_path: ($) => repeat1(seq($._directory_name, '/')),

    _directory_name: ($) => choice($.identifier, '..', '.'),

    model_info: ($) =>
      seq(
        field('name', $.identifier),
        repeat(seq('.', field('subcomponent', $.identifier))),
        optional(seq(keyword('as'), field('alias', $.identifier))),
      ),

    submodel_list: ($) =>
      seq(
        '[',
        optional($._end_of_line),
        optional(
          seq(
            $.model_info,
            repeat(seq(',', optional($._end_of_line), $.model_info)),
            optional(','),
            optional($._end_of_line),
          ),
        ),
        ']',
      ),

    // -------------------------------------------------------------------
    // Test
    // -------------------------------------------------------------------

    test: ($) =>
      seq(
        optional(field('trace', $.trace_level)),
        keyword('test'),
        ':',
        field('condition', $._expression),
        $._end_of_line,
        optional($.note),
      ),

    // -------------------------------------------------------------------
    // Parameters
    // -------------------------------------------------------------------

    parameter: ($) =>
      seq(
        optional(field('performance', $.performance)),
        optional(field('trace', $.trace_level)),
        field('label', $.label),
        optional(field('limits', $.limits)),
        ':',
        optional(field('render_name', $.render_name)),
        field('name', $.identifier),
        '=',
        field('value', $._parameter_value),
        $._end_of_line,
        optional($.note),
      ),

    // Shorthand form (design bodies only, but accepted anywhere for
    // simplicity): `[$] [*|**] name[.instance] [Limits] = value`
    design_parameter: ($) =>
      seq(
        optional(field('performance', $.performance)),
        optional(field('trace', $.trace_level)),
        field('name', $.identifier),
        optional(seq('.', field('instance', $.identifier))),
        optional(field('limits', $.limits)),
        '=',
        field('value', $._parameter_value),
        $._end_of_line,
        optional($.note),
      ),

    limits: ($) => choice($.continuous_limits, $.discrete_limits),

    continuous_limits: ($) =>
      seq(
        '(',
        field('min', $._expression),
        ',',
        field('max', $._expression),
        ')',
      ),

    discrete_limits: ($) =>
      seq('[', $._expression, repeat(seq(',', $._expression)), ']'),

    _parameter_value: ($) => choice($.simple_value, $.piecewise_value),

    simple_value: ($) =>
      seq(
        field('expr', $._expression),
        optional(seq(':', field('unit', $._unit_expression))),
      ),

    // Pieces are one-per-line: `PiecewiseExpr = PiecewisePart, [":", UnitExpr],
    // { EndOfLine, PiecewisePart }`.
    piecewise_value: ($) =>
      seq(
        $.piecewise_part,
        optional(seq(':', field('unit', $._unit_expression))),
        repeat(seq($._end_of_line, $.piecewise_part)),
      ),

    // NOTE: faithful to the reference grammar, a piecewise part has no
    // closing brace: `{ expr if condition`.
    piecewise_part: ($) =>
      seq(
        '{',
        field('expr', $._expression),
        keyword('if'),
        field('condition', $._expression),
      ),

    // ---------------------------------------------------------------------
    // Expressions
    // ---------------------------------------------------------------------

    _expression: ($) =>
      choice(
        $.number,
        $.string,
        $.boolean,
        $.function_call,
        $.unit_cast,
        $.variable,
        $.parenthesized_expression,
        $.unary_expression,
        $.binary_expression,
      ),

    variable: ($) =>
      seq(
        field('name', $.identifier),
        optional(seq('.', field('reference', $.identifier))),
      ),

    unit_cast: ($) =>
      seq(
        '(',
        field('expr', $._expression),
        ':',
        field('unit', $._unit_expression),
        ')',
      ),

    unary_expression: ($) =>
      choice(
        prec(PREC.not, seq(field('operator', keyword('not')), field('operand', $._expression))),
        prec(PREC.neg, seq(field('operator', '-'), field('operand', $._expression))),
      ),

    binary_expression: ($) =>
      choice(
        ...[
          [PREC.fallback, '?'],
          [PREC.or, keyword('or')],
          [PREC.and, keyword('and')],
          [PREC.minmax, '|'],
        ].map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(
              field('left', $._expression),
              field('operator', operator),
              field('right', $._expression),
            ),
          ),
        ),
        prec.left(
          PREC.comparison,
          seq(
            field('left', $._expression),
            field('operator', choice('<', '<=', '>', '>=', '==', '!=')),
            field('right', $._expression),
          ),
        ),
        prec.left(
          PREC.additive,
          seq(
            field('left', $._expression),
            field('operator', choice('+', '-', '--')),
            field('right', $._expression),
          ),
        ),
        prec.left(
          PREC.multiplicative,
          seq(
            field('left', $._expression),
            field('operator', choice('*', '/', '//', '%')),
            field('right', $._expression),
          ),
        ),
        prec.right(
          PREC.exponential,
          seq(
            field('left', $._expression),
            field('operator', '^'),
            field('right', $._expression),
          ),
        ),
      ),

    number: () => token(choice(NUMBER, INF_LITERAL)),
    _unit_expression: ($) =>
      choice(
        $.unit,
        $.unit_one,
        $.unit_binary_expression,
        $.parenthesized_unit_expression,
      ),

    unit: ($) =>
      seq(
        field('name', $.unit_identifier),
        optional(seq('^', field('exponent', $.number))),
      ),

    // A bare literal `1` denoting "unitless". No trailing-digit exclusion is
    // needed: nothing else in a unit expression can start with a digit, so
    // `12` simply fails to parse as a unit (correctly, since it isn't one).
    unit_binary_expression: ($) =>
      prec.left(
        1,
        seq(
          field('left', $._unit_expression),
          field('operator', choice('*', '/')),
          field('right', $._unit_expression),
        ),
      ),

    unit_identifier: () =>
      token(choice(seq(IDENTIFIER, optional('$')), '$', '%')),

    // ---------------------------------------------------------------------
    // Lexical primitives
    // ---------------------------------------------------------------------

    identifier: () => IDENTIFIER,

    // No explicit inter-word separator: unlike most of this grammar (where
    // inline whitespace is uniformly an extra), using an explicit
    // `/[ \t]+/` token here would make the lexer commit to "there's
    // another label word coming" the moment it sees *any* whitespace,
    // before it can tell whether that whitespace is actually just
    // formatting before the next, unrelated token (e.g. the `=` of a
    // `design_parameter`) -- pre-empting the correct interpretation. Plain
    // extras avoid that. Because only inline whitespace (not `\n`) is an
    // extra (see `extras` above), a label still can't accidentally span a
    // line break: `_label_other_word` simply has no way to be reached once
    // a line break is due, since that position instead requires
    // `_end_of_line`.
    label: ($) => seq($._label_first_word, repeat($._label_other_word)),
    _label_first_word: ($) => choice($.identifier, token(LABEL_PUNCTUATED_FIRST_WORD)),
    // Higher precedence than `identifier`'s default (0): once inside a
    // label, an identifier-shaped *continuation* word (e.g. `Budget` in
    // `section Mass Budget`) should always keep extending the label rather
    // than being lexed as a plain `identifier` -- which, at this parser
    // position, would otherwise tie with `_label_other_word` (both match
    // the same text with the same length) and is only "valid" here because
    // a new declaration (e.g. a shorthand `design_parameter`) can also
    // start with a bare identifier. See the module comment above `label`
    // for why this ambiguity can't be resolved by GLR forking the way the
    // *first* word's identifier-vs-keyword/label choice is.
    _label_other_word: () => token(prec(1, LABEL_OTHER_WORD)),
  },
});
