tree-sitter-oneil/test/corpus/labels_and_notes.txt
========================================================================
Full-form parameter with a multi-word label
========================================================================

Surface area: A = 4 * pi * R^2

------------------------------------------------------------------------

(source_file
  (parameter
    label: (label
      (identifier))
    name: (identifier)
    value: (simple_value
      expr: (binary_expression
        left: (binary_expression
          left: (number)
          right: (variable
            name: (identifier)))
        right: (binary_expression
          left: (variable
            name: (identifier))
          right: (number))))))

========================================================================
Design parameter shorthand with a dotted instance path
========================================================================

dv.c = 4000 :m/s

------------------------------------------------------------------------

(source_file
  (design_parameter
    name: (identifier)
    instance: (identifier)
    value: (simple_value
      expr: (number)
      unit: (unit_binary_expression
        left: (unit
          name: (unit_identifier))
        right: (unit
          name: (unit_identifier))))))

========================================================================
Section label with multiple words, not spanning the following blank line
========================================================================

section Mass Budget

dv = 100

------------------------------------------------------------------------

(source_file
  (section
    label: (label
      (identifier))
    (design_parameter
      name: (identifier)
      value: (simple_value
        expr: (number)))))

========================================================================
Label whose first word looks like an identifier, containing a hyphenated word
========================================================================

True non-spherical surface area: A = 4

------------------------------------------------------------------------

(source_file
  (parameter
    label: (label
      (identifier))
    name: (identifier)
    value: (simple_value
      expr: (number))))

========================================================================
Single-line note followed by another declaration, with a blank line between them
========================================================================

g = 3.72 :m/s^2
~ note here

h = 1

------------------------------------------------------------------------

(source_file
  (design_parameter
    name: (identifier)
    value: (simple_value
      expr: (number)
      unit: (unit_binary_expression
        left: (unit
          name: (unit_identifier))
        right: (unit
          name: (unit_identifier)
          exponent: (number))))
    (note
      (single_line_note)))
  (design_parameter
    name: (identifier)
    value: (simple_value
      expr: (number))))

========================================================================
Piecewise value with two parts, one per line
========================================================================

n = { 1 if x > 0
{ 2 if x <= 0

------------------------------------------------------------------------

(source_file
  (design_parameter
    name: (identifier)
    value: (piecewise_value
      (piecewise_part
        expr: (number)
        condition: (binary_expression
          left: (variable
            name: (identifier))
          right: (number)))
      (piecewise_part
        expr: (number)
        condition: (binary_expression
          left: (variable
            name: (identifier))
          right: (number))))))
